Fix rendering issue on repertoire list on small screens. Add larger image for small screens.

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,15 @@ th {
   height: 75vh;
   overflow-y: auto;
 }
+
+/* Repertoire filter buttons */
+
+#all-button,
+#classical-button,
+#pop-button,
+#bollywood-button {
+  margin-top: 10px;
+}
 @media only screen and (max-width: 992px) {
   h1 {
     font-size: 150px;
@@ -156,5 +165,13 @@ th {
 @media only screen and (max-width: 600px) {
   h1 {
     font-size: 75px;
+    padding-top: 30px;
+  }
+  td {
+    max-width: 5px !important;
+    font-size: 14px;
+  }
+  nav.navbar.navbar-expand-lg {
+    height: 50px;
   }
 }
